@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-29T01:19:24Z",
+  "timestamp" : "2024-10-29T12:34:16Z",
   "count_outdated" : 4517,
   "uniques_outdated" : 2267,
-  "count" : 4526,
-  "uniques" : 2276,
+  "count" : 4527,
+  "uniques" : 2277,
   "clones" : [
     {
       "timestamp": "2024-10-17T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2024-10-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
