@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 9,
+  "count": 10,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2024-10-17T00:00:00Z",
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2024-10-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
